--- a/src/components/items-components/EnterPassword.scss
+++ b/src/components/items-components/EnterPassword.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
-
 .enter-password-container {
    min-height: 90vh;
    display: flex;
@@ -117,6 +115,10 @@
 
                   img {
                      margin-left: 8px;
+                  }
+
+                  .stay-sign-in-active {
+                     margin-left: 28px;
                   }
 
                }
