added new component, also fixed styles for common buttons

--- a/src/components/page-components/back-button/BackButton.scss
+++ b/src/components/page-components/back-button/BackButton.scss
@@ -3,6 +3,7 @@
    padding: 5px 20px;
    display: flex;
    align-items: center;
+   margin-bottom: 15px;
 
    .back-arrow {
       height: 20px;
@@ -12,5 +13,4 @@
    span {
       font-weight: 600;
    }
-
 }
