--- a/src/components/page-components/download-button/DownloadButton.scss
+++ b/src/components/page-components/download-button/DownloadButton.scss
@@ -1,19 +1,20 @@
-.downowload-button-block {
+.download-button-block {
    width: 100%;
-   display: flex;
-   justify-content: end;
 
    span {
       width: 200px;
       height: 40px;
+      margin: auto;
       display: flex;
       justify-content: center;
       align-items: center;
       background-color: #132B50;
       border-radius: 5px;
       margin-right: 20px;
+      margin-bottom: 10px;
+      margin-top: 20px;
 
-      .downowload-button {
+      .download-button {
          background-color: transparent;
          color: white;
          text-decoration: none;
